--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,24 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryColor">#212121</color>
+
+    <color name="primaryColorRed">#E1030E</color>
+
+    <color name="primaryLightColor">#484848</color>
+
+    <color name="primaryDarkColor">#000000</color>
+
+    <color name="primaryDarkColorRed">#A1030B</color>
+
+    <color name="secondaryColor">#f5f5f5</color>
+
+    <color name="secondaryLightColor">#ffffff</color>
+
+    <color name="secondaryDarkColor">#c2c2c2</color>
+
+    <color name="primaryTextColor">#ffffff</color>
+
+    <color name="secondaryTextColor">#000000</color>
 </resources>
