--- a/app/src/main/res/layout/item_ingredient_inrecipe.xml
+++ b/app/src/main/res/layout/item_ingredient_inrecipe.xml
@@ -21,6 +21,7 @@
             tools:srcCompat="@android:drawable/sym_def_app_icon" />
 
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/materialTextView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -30,15 +31,32 @@
             android:textSize="12sp"
             tools:text="Ingredient" />
 
-        <com.google.android.material.textview.MaterialTextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:maxWidth="92dp"
-            android:maxLines="2"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            tools:text="Amount" />
+            android:orientation="horizontal">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginRight="8dp"
+                android:maxWidth="92dp"
+                android:maxLines="2"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                tools:text="Amount" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:maxWidth="92dp"
+                android:maxLines="2"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                tools:text="Unit" />
+        </LinearLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
