--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -72,6 +72,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/recipeTime"
+                bindCookingTime="@{recipe.readyInMinutes}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
