--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -89,22 +89,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="45 min" />
 
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/barrier3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="end"
-                tools:layout_editor_absoluteX="411dp" />
-
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/recipeName"
-                android:text="@{recipe.title}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:maxLines="2"
+                android:text="@{recipe.title}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform"
@@ -117,6 +111,7 @@
                 android:id="@+id/instruction"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
