--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#F68545</color>
+    <color name="colorPrimaryDark">#C56A37</color>
+    <color name="colorAccent">#F68545</color>
+    <color name="secondaryTextColor">#484848</color>
+    <color name="secondaryButtonColor">#D8D8D8</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
