--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/registerFragment">
 
     <fragment
         android:id="@+id/FirstFragment"
@@ -18,10 +18,20 @@
     <fragment
         android:id="@+id/recipeDetailFragment"
         android:name="com.example.techmecook.ui.recipe_detail.RecipeDetailFragment"
-        android:label="RecipeDetailFragment" >
+        android:label="RecipeDetailFragment">
         <argument
             android:name="Id"
-            app:argType="integer"
-            android:defaultValue="639580" />
+            android:defaultValue="639580"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.techmecook.ui.register.RegisterFragment"
+        android:label="RegisterFragment">
+        <action
+            android:id="@+id/action_registerFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment"
+            app:popUpTo="@id/registerFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
