--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -192,13 +192,13 @@
                 android:id="@+id/like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
                 android:background="#EDECEC"
                 android:tint="#434141"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/recipeTime"
-                app:layout_constraintTop_toBottomOf="@+id/recipeTime"
+                app:layout_constraintTop_toBottomOf="@+id/recipeName"
                 app:srcCompat="@android:drawable/btn_star" />
 
             <TextView
